--- a/remont-televizorov.html
+++ b/remont-televizorov.html
@@ -245,24 +245,24 @@
                     <h3>Устраняем любые неисправности:</h3>
                     <div class="modcontent clearfix">
                         <ul class="menu nav nav-pills menuu">
-                            <li class="item-0"><a href="ne-lovit-kanaly"><img src="img/tv/ne-vkluchaetsa.png" alt="Не включается"><span class="image-title">Не включается</span></a>
+                            <li class="item-0"><a href="#"><img src="img/tv/ne-vkluchaetsa.png" alt="Не включается"><span class="image-title">Не включается</span></a>
                             </li>
-                            <li class="item-1"><a href="ne-lovit-kanaly"><img src="img/tv/ne-lovit.png" alt="Не ловит каналы"><span class="image-title">Не ловит каналы</span></a>
+                            <li class="item-1"><a href="#"><img src="img/tv/ne-lovit.png" alt="Не ловит каналы"><span class="image-title">Не ловит каналы</span></a>
                             </li>
-                            <li class="item-2"><a href="sam-otklyuchaetsya"><img src="img/tv/sam-otkl.png" alt="Сам отключается"><span class="image-title">Сам отключается</span></a>
+                            <li class="item-2"><a href="#"><img src="img/tv/sam-otkl.png" alt="Сам отключается"><span class="image-title">Сам отключается</span></a>
                             </li>
-                            <li class="item-3"><a href="polosy-ili-ryab-na-ekrane"><img src="img/tv/polosy.png" alt="Полосы или рябь на экране"><span class="image-title">Полосы или рябь на экране</span></a>
+                            <li class="item-3"><a href="#"><img src="img/tv/polosy.png" alt="Полосы или рябь на экране"><span class="image-title">Полосы или рябь на экране</span></a>
                             </li>
-                            <li class="item-4"><a href="ne-rabotayut-raz-emy-hdmi"><img src="img/tv/hdmi.png" alt="Не работают разъемы HDMI"><span class="image-title">Не работают разъемы HDMI</span></a>
+                            <li class="item-4"><a href="#"><img src="img/tv/hdmi.png" alt="Не работают разъемы HDMI"><span class="image-title">Не работают разъемы HDMI</span></a>
                             </li>
-                            <li class="item-5"><a href="razbit-ekran-matritsa-televizora"><img src="img/tv/razbit-ekran.png" alt="Разбит экран (матрица)"><span class="image-title">Разбит экран (матрица)</span></a>
+                            <li class="item-5"><a href="#"><img src="img/tv/razbit-ekran.png" alt="Разбит экран (матрица)"><span class="image-title">Разбит экран (матрица)</span></a>
                             </li>
-                            <li class="item-6"><a href="perezagruzhaetsya"><img src="img/tv/perezagruz.png" alt="Перезагружается"><span class="image-title">Перезагружается</span></a>
+                            <li class="item-6"><a href="#"><img src="img/tv/perezagruz.png" alt="Перезагружается"><span class="image-title">Перезагружается</span></a>
                             </li>
-                            <li class="item-7"><a href="net-zvuka"><img src="img/tv/net-zvuka.png" alt="Нет звука"><span class="image-title">Нет звука</span></a>                                </li>
-                            <li class="item-8"><a href="est-zvuk-net-kartinki"><img src="img/tv/est-zvuk-net-kartinki.png" alt="Есть звук, нет картинки"><span class="image-title">Есть звук, нет картинки</span></a>
+                            <li class="item-7"><a href="#"><img src="img/tv/net-zvuka.png" alt="Нет звука"><span class="image-title">Нет звука</span></a>                                </li>
+                            <li class="item-8"><a href="#"><img src="img/tv/est-zvuk-net-kartinki.png" alt="Есть звук, нет картинки"><span class="image-title">Есть звук, нет картинки</span></a>
                             </li>
-                            <li class="item-9"><a href="net-izobrazheniya"><img src="img/tv/net-izobrageniya.png" alt="Нет изображения"><span class="image-title">Нет изображения</span></a>
+                            <li class="item-9"><a href="#"><img src="img/tv/net-izobrageniya.png" alt="Нет изображения"><span class="image-title">Нет изображения</span></a>
                             </li>
                         </ul>
                     </div>
@@ -272,17 +272,17 @@
                     <h3>Работаем со всеми видами TV:</h3>
                     <div class="modcontent clearfix">
                         <ul class="menu nav nav-pills menuu menuuu">
-                            <li class="item-0"><a href="uslugi/3d"><img src="img/tv/3D.png" alt="3D"></a>
+                            <li class="item-0"><a href="#"><img src="img/tv/3D.png" alt="3D"></a>
                             </li>
-                            <li class="item-1"><a href="uslugi/plazmennye"><img src="img/tv/plazma.png" alt="Плазменные"></a>
+                            <li class="item-1"><a href="#"><img src="img/tv/plazma.png" alt="Плазменные"></a>
                             </li>
-                            <li class="item-2"><a href="uslugi/led"><img src="img/tv/LED_TV.png" alt="LED ТВ"></a>
+                            <li class="item-2"><a href="#"><img src="img/tv/LED_TV.png" alt="LED ТВ"></a>
                             </li>
-                            <li class="item-3"><a href="uslugi/zhk"><img src="img/tv/JK.png" alt="ЖК (LCD)"></a>
+                            <li class="item-3"><a href="#"><img src="img/tv/JK.png" alt="ЖК (LCD)"></a>
                             </li>
-                            <li class="item-4"><a href="uslugi/oled"><img src="img/tv/OLED.png" alt="OLED"></a>
+                            <li class="item-4"><a href="#"><img src="img/tv/OLED.png" alt="OLED"></a>
                             </li>
-                            <li class="item-5"><a href="uslugi/4k"><img src="img/tv/4K.png" alt="4k"></a>
+                            <li class="item-5"><a href="#"><img src="img/tv/4K.png" alt="4k"></a>
                             </li>
                         </ul>
                     </div>
