--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <meta name="description" content="Ремонт телевизоров, ноутбуков, смартфонов, цифровой и бытовой техники в Омега. Запчасти в наличии. Тел. (291) 2-63-06">
+        <meta name="description" content="Ремонт телевизоров, ноутбуков, смартфонов, цифровой и бытовой техники в Омега. Запчасти в наличии. Тел. 0(291)2-63-06">
         <meta name="author" content="">
 
-        <title>Ремонт телевизоров, телефонов, ноутбуков и любой другой техники в "Омега"</title>
+        <title>Ремонт телевизоров, телефонов, ноутбуков и любой другой техники в Чадыр-Лунге</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/template-cyan.css" type="text/css">
@@ -98,6 +98,30 @@
                         <!-- Featured listing 1 -->
                         <div class="item active">
                             <div class="col-sm-8 holder">
+                                <img class="img-responsive" src="img/rem/remont_tv.png" alt="">
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="carousel-caption">
+                                    <h2>Ремонт телевизоров</h2>
+                                    <ul class="list-inline list-unstyled">
+                                        <li>стоимость от 100 MDL</i></li>
+                                        <li>срок от 1 часа</li>
+                                    </ul>
+                                    <p>Большой опыт в ремонте всех видов телевизоров. 
+                                       Замена дисплея, динамиков, разъёмов и кнопок.
+                                       Ремонт блока питания и других модулей.
+                                       Всегда в наличии запчасти и дополнительные аксессуары.</p>
+                                    <div class="buttons">
+                                        <a class="btn btn-info btn-details" href="remont-televizorov.html">Подробнее</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End featured listing 1 -->
+
+                        <!-- Featured listing 2 -->
+                        <div class="item">
+                            <div class="col-sm-8 holder">
                                 <img class="img-responsive" src="img/rem/remont_mob.png" alt="">
                             </div>
                             <div class="col-sm-4">
@@ -118,9 +142,9 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- End featured listing 1 -->
+                        <!-- End featured listing 2 -->
 
-                        <!-- Featured listing 2 -->
+                        <!-- Featured listing 3 -->
                         <div class="item">
                             <div class="col-sm-8 holder">
                                 <img class="img-responsive" src="img/rem/remont_nout.png" alt="">
@@ -141,54 +165,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- End featured listing 2 -->
-
-                        <!-- Featured listing 3 -->
-                        <div class="item">
-                            <div class="col-sm-8 holder">
-                                <img class="img-responsive" src="img/rem/remont_apple.png" alt="">
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="carousel-caption">
-                                    <h2>Ремонт техники Apple</h2>
-                                    <ul class="list-inline list-unstyled">
-                                        <li>стоимость от 100 MDL</i></li>
-                                        <li>срок от 2 часов</li>
-                                    </ul>
-                                    <p>Большой опыт в ремонте Iphone и Ipad. 
-                                        Замена дисплея, сенсора, разъёмов и батарей.
-                                        Всегда в наличии запчасти, корпуса и дополнительные аксессуары.</p>
-                                    <div class="buttons">
-                                        <a class="btn btn-info btn-details" href="remont-apple.html">Подробнее</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         <!-- End featured listing 3 -->
-
-                        <div class="item">
-                            <div class="col-sm-8 holder">
-                                <img class="img-responsive" src="img/rem/remont_org.png" alt="">
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="carousel-caption">
-                                    <h2>Ремонт оргтехники</h2>
-                                    <ul class="list-inline list-unstyled">
-                                        <li>стоимость от 100 MDL</i></li>
-                                        <li>срок от 2 часов</li>
-                                    </ul>
-                                    <p>
-                                        Сервис оказывает услуги по ремонту и обслуживанию любой оргтехники.
-                                        Сломался принтер, сканер, копировальный аппарат? 
-                                        Наши опытные специалисты устранят поломку и квалифицированно обслужат Вашу технику
-                                    </p>
-                                    <div class="buttons">
-                                        <a class="btn btn-info btn-details" href="remont-orgtehniki.html">Подробнее</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
                     <!-- End wrapper for slides -->
 
@@ -199,7 +176,6 @@
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
                         </ol>
                         <!-- End indicators -->
                     </div>
@@ -224,13 +200,24 @@
                             <!-- Thumbnail -->
                             <div class="listing-thumb">
                                 <a href="#" class="main-link">
+                                    <img class="img-responsive img-center" src="img/listings/nb_t.jpg" alt="">
+                                    <h3 class="listing-title">Ремонт телевизоров</h3>
+                                    <span class="overlay-mask"></span>
+                                </a>
+                                <a class="link centered" href="#" onclick="location.href = 'remont-televizorov.html#listings'"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
+                            </div>
+                        </article>
+
+                        <article class="col-md-3 col-sm-6 listing-item recent sale">
+                            <!-- Thumbnail -->
+                            <div class="listing-thumb">
+                                <a href="#" class="main-link">
                                     <img class="img-responsive img-center" src="img/listings/nb_s.jpg" alt="">
                                     <h3 class="listing-title">Ремонт моб. устройств</h3>
                                     <span class="overlay-mask"></span>
                                 </a>
                                 <a class="link centered" href="#" onclick="location.href = 'remont-mobilnyh.html#listings'"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
                             </div>
-
                         </article>
 
                         <article class="col-md-3 col-sm-6 listing-item recent rent">
@@ -242,29 +229,6 @@
                                     <span class="overlay-mask"></span>
                                 </a>
                                 <a class="link centered" href="#" onclick="location.href = 'remont-noutbukov.html#listings'"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
-                            </div>
-
-                        </article>
-
-                        <article class="col-md-3 col-sm-6 listing-item rent">
-
-                            <div class="listing-thumb">
-                                <a href="#" class="main-link">
-                                    <img class="img-responsive img-center" src="img/listings/nb_a.jpg" alt="">
-                                    <h3 class="listing-title">Ремонт техники Apple</h3>
-                                    <span class="overlay-mask"></span>
-                                </a>
-                                <a class="link centered" href="#" onclick="location.href = 'remont-apple.html#listings'"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
-                            </div>
-                        </article>
-                        <article class="col-md-3 col-sm-6 listing-item rent">
-                            <div class="listing-thumb">
-                                <a href="#" class="main-link">
-                                    <img class="img-responsive img-center" src="img/listings/nb_o.jpg" alt="">
-                                    <h3 class="listing-title">Ремонт оргтехники</h3>
-                                    <span class="overlay-mask"></span>
-                                </a>
-                                <a class="link centered" href="#" onclick="location.href = 'remont-orgtehniki.html#listings'"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
                             </div>
                         </article>
                     </div>
