--- a/remont-mobilnyh.html
+++ b/remont-mobilnyh.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <meta name="description" content="Ремонт ноутбуков, смартфонов, цифровой и бытовой техники в Омега. Запчасти в наличии. Тел. (291) 2-63-06">
+        <meta name="description" content="Ремонт телефонов и планшетов в Чадыр-Лунге. Большой опыт, запчасти в наличии.  Тел. 0(291)2-63-06">
         <meta name="author" content="">
 
-        <title>Ремонт телефонов, ноутбуков и любой цифровой техники в "Омега"</title>
+        <title>Ремонт телефонов в Чадыр-Лунге</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/template-cyan.css" type="text/css">
@@ -206,7 +206,7 @@
 					</ol>
 
 					<h3>Сроки и стоимость ремонтных работ</h3>
-					<p class="last-description">Сроки и стоимость ремонтных работ представлены во вкладках ниже.  Если вам нужен <a target="_blank" href="remont-apple.html">ремонт айфонов в Чадыр-Лунге</a>, звоните!</p>						
+					<p class="last-description">Сроки и стоимость ремонтных работ представлены во вкладках ниже. Если вам нужен <a target="_blank" href="remont-noutbukov.html">ремонт ноутбуков в Чадыр-Лунге</a>, звоните!</p>						
 				</div>
 
                 <div class="listings-container">
