--- a/remont-noutbukov.html
+++ b/remont-noutbukov.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <meta name="description" content="Ремонт ноутбуков, смартфонов, цифровой и бытовой техники в Омега. Запчасти в наличии. Тел. (291) 2-63-06">
+        <meta name="description" content="Ремонт ноутбуков в Чадыр-Лунге, любая сложность, запчасти в наличии. Тел. 0(291)2-63-06">
         <meta name="author" content="">
 
-        <title>Ремонт телефонов, ноутбуков и любой цифровой техники в "Омега"</title>
+        <title>Ремонт ноутбуков в Чадыр-Лунге</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/template-cyan.css" type="text/css">
@@ -209,9 +209,7 @@
 					</p>					
 
 					<h3>Сроки и стоимость ремонтных работ</h3>
-					<p class="last-description">Сроки и стоимость работ зависят от типа неисправности. Подробная информация во вкладках ниже.
-					Также мы осуществляем <a target="_blank" href="remont-mobilnyh.html">ремонт сотовых телефонов в Чадыр-Лунге</a>.
-					</p>						
+					<p class="last-description">Сроки и стоимость работ зависят от типа неисправности. Подробная информация во вкладках ниже. Также мы осуществляем <a target="_blank" href="remont-televizorov.html">ремонт телевизоров в Чадыр-Лунге.</a></p>						
 				</div>
 
                 <div class="listings-container">
