--- a/remont-televizorov.html
+++ b/remont-televizorov.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <meta name="description" content="Ремонт ноутбуков, смартфонов, цифровой и бытовой техники в Омега. Запчасти в наличии. Тел. (291) 2-63-06">
+        <meta name="description" content="Ремонт телевизоров в Чадыр-Лунге. Выезд специалиста, запчасти в наличии. Тел. 0(291)2-63-06">
         <meta name="author" content="">
 
-        <title>Ремонт телефонов, ноутбуков и любой цифровой техники в "Омега"</title>
+        <title>Ремонт телевизоров в Чадыр-Лунге</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/template-cyan.css" type="text/css">
@@ -156,7 +156,6 @@
                             </div>
                         </div>
                         <!-- End featured listing 3 -->
-
                     </div>
                     <!-- End wrapper for slides -->
 
@@ -179,10 +178,9 @@
         <!-- Listings -->
         <section id="listings">
             <div class="container">
-                 <div class="section-title">
+                <div class="section-title">
                     <h2>РЕМОНТ ТЕЛЕВИЗОРОВ</h2>
-
-                 </div> 
+                </div> 
                 <div class="section-description">
                     <p>На дисплее цветные разводы и полосы? Экран не светится? Телевизор не включается? Механические повреждения, скачки напряжения и программные сбои – причины выхода из строя телевизоров. Экономьте время и деньги – обращайтесь в сервисный центр «Омега». Наши специалисты осуществляют <b>ремонт телевизоров в Чадыр-Лунге</b> больше 10 лет. Гарантия того, что работа будет выполнена в срок, – большой выбор запчастей в наличии.
                     </p>
@@ -204,7 +202,7 @@
                     </ol>
                 </div>
                 <!-- Test block -->
-                    <div class="section-description">
+                <div class="section-description">
                     <h3>Устраняем любые неисправности:</h3>
                     <div class="modcontent clearfix">
                         <ul class="menu nav nav-pills menuu">
@@ -250,210 +248,8 @@
                         </ul>
                     </div>
                 </div>
-                <!-- End of Test block -->
-
-
- <!--
-                <div class="listings-container">
-                    <div class="row parent-row">
-                        <article class="col-md-3 col-sm-6 listing-item rent">
-                            <div class="listing-thumb">
-                                <a href="#" class="main-link">
-                                    <img class="img-responsive img-center" src="img/listings/tv/ne-vkluchaetsa2.png" alt="">
-                                    <h3 class="listing-title">Не включается</h3>
-                                    <span class="overlay-mask"></span>
-                                </a>
-                                <a class="link centered" href="#"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
-                            </div>
-
-                            <div class="preview-content" data-images="">
-                                <div class="row">
-
-                                    <table>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Описание
-                                            </td>
-                                            <td class = "time_service first_time_service">
-                                                Шлейф – наверное, самая мелкая из составляющих планшетов.
-                                                Но выполняет она одну очень важную функцию – с помощью различных шлейфов детали планшета связаны между собой.
-                                                Вариант устранения проблем со шлейфами лишь один – заменить вышедший из строя на новый.
-                                                Самостоятельно браться за эту задачу не стоит – иногда для замены шлейфа нужно произвести тончайшую работу,
-                                                которая под силу лишь профессиональному мастеру.
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Время ремонта
-                                            </td>
-                                            <td class = "time_service second_time_service">
-                                                от 2 часа
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Стоимость работы
-                                            </td>
-                                            <td class = "time_service first_time_service">
-                                                от <span>400</span> MDL.
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-
-                        </article>
-                        <article class="col-md-3 col-sm-6 listing-item rent">
-                            <div class="listing-thumb">
-                                <a href="#" class="main-link">
-                                    <img class="img-responsive img-center" src="img/listings/mob_p_5.png" alt="">
-                                    <h3 class="listing-title">Перепрошивка</h3>
-                                    <span class="overlay-mask"></span>
-                                </a>
-                                <a class="link centered" href="#"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
-                            </div>
-
-                            <div class="preview-content" data-images="">
-                                <div class="row">
-
-                                    <table>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Описание
-                                            </td>
-                                            <td class = "time_service first_time_service">
-                                                Неисправность устройства может быть вызвана не только физическим повреждением компонентов, но и программными сбоями.
-                                                Наши сотрудники быстро и профессионально проведут диагностику и обновят ПО.
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Время ремонта
-                                            </td>
-                                            <td class = "time_service second_time_service">
-                                                от 2,5 часа
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Стоимость работы
-                                            </td>
-                                            <td class = "time_service first_time_service">
-                                                от <span>250</span> MDL.
-                                            </td>
-                                        </tr>
-                                    </table>
-
-                                </div>
-                            </div>
-
-                        </article>
-                        <article class="col-md-3 col-sm-6 listing-item rent">
-                            <div class="listing-thumb">
-                                <a href="#" class="main-link">
-                                    <img class="img-responsive img-center" src="img/listings/mob_a_6.png" alt="">
-                                    <h3 class="listing-title">Замена аккумулятора</h3>
-                                    <span class="overlay-mask"></span>
-                                </a>
-                                <a class="link centered" href="#"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
-                            </div>
-
-
-                            <div class="preview-content" data-images="">
-                                <div class="row">
-                                    <table>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Описание
-                                            </td>
-                                            <td class = "time_service first_time_service">
-                                                На некоторые устройства устанавливается несъёмный аккумулятор.
-                                                Это не значит, что с его старением устройство придётся выбросить.
-                                                Наши инженеры аккуратно разберут ваше устройство и заменят батарею на новую.
-                                                И снова телефон или планшет будет радовать долгими часами без подзарядки.
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Время ремонта
-                                            </td>
-                                            <td class = "time_service second_time_service">
-                                                от 1,5 часа
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Стоимость работы
-                                            </td>
-                                            <td class = "time_service first_time_service">
-                                                от <span>500</span> MDL.
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Стоимость запчастей
-                                            </td>
-                                            <td class = "time_service second_time_service">
-                                                от 200 MDL.
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-
-                        </article>
-                        <article class="col-md-3 col-sm-6 listing-item rent">
-                            <div class="listing-thumb">
-                                <a href="#" class="main-link">
-                                    <img class="img-responsive img-center" src="img/listings/mob_k_7.png" alt="">
-                                    <h3 class="listing-title">Замена кнопок</h3>
-                                    <span class="overlay-mask"></span>
-                                </a>
-                                <a class="link centered" href="#"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
-                            </div>
-
-                            <div class="preview-content" data-images="">
-                                <div class="row">
-                                    <table>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Описание
-                                            </td>
-                                            <td class = "time_service first_time_service">
-                                                Кнопки приходят в негодность достаточно часто. Иногда из-за этого устройство нельзя включить, звук невозможно отрегулировать и т.п. 
-                                                Наши сотрудники почистят аппарат от грязи, заменят повреждённые элементы, и всё будет работать как раньше.
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Время ремонта
-                                            </td>
-                                            <td class = "time_service second_time_service">
-                                                от 2 часов
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Стоимость работы
-                                            </td>
-                                            <td class = "time_service first_time_service">
-                                                от <span>500</span> MDL.
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class = "name_service">
-                                                Стоимость запчастей
-                                            </td>
-                                            <td class = "time_service second_time_service">
-                                                от 200 MDL.
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-                        </article>
-                    </div>
-                </div> -->
+                <p class="last-description"><br>Также мы осуществляем <a target="_blank" href="remont-mobilnyh.html">ремонт мобильных в Чадыр-Лунге.</a></p>                       
+            <!-- End of Test block -->
             </div>
         </section>
         <!-- End listings -->
@@ -484,7 +280,7 @@
                 </div>
             </div>
         </div>
-        <!-- End preview panel -->      
+        <!-- End preview panel -->    
         
        <section id="advantages">
             <div class="section-title">
