--- a/remont-mobilnyh.html
+++ b/remont-mobilnyh.html
@@ -66,7 +66,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-2 col-sm-6 logo_serv">
-                        <a href = "http://service-omega.ru/"><img src = "img/serv_logo.png"></a>
+                        <a href = "http://omega1580.github.io/"><img src = "img/serv_logo.png"></a>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <i class="fa fa-map-marker email-icon"></i>
